--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <h3>
           Découvrez des restaurants d’exception, sélectionnés par nos soins.
         </h3>
-        <button class="style-button shadow">
+        <a href="#restaurant" class="style-button shadow">
           <span>Explorer nos restaurants</span>
-        </button>
+        </a>
       </section>
       <!-- ***************************** section fonctionnement ************************ -->
       <section class="fonctionnement">
@@ -94,7 +94,7 @@
         </div>
       </section>
       <!-- ***************************** section restaurant ************************ -->
-      <section class="restaurant">
+      <section class="restaurant" id="restaurant">
         <h1>Restaurants</h1>
         <div class="articles">
           <article>
